--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/DrawSVGPlugin.min.js"></script>
+  <script src="main.js"></script>
 </head>
 
 <body>
@@ -351,11 +352,9 @@
       <!-- Banners will be dynamically loaded here -->
     </div>
   </div>
-  <script src="main.js"></script>
   <script>
     function pageLoaded() {
-      init();
-      loadMasonryGrid();
+      init(); // Only initialize the hero animation
     }
 
     window.onload = pageLoaded;
