gtech hero debug

--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
     <div class="interactive-ad-container">
       <svg id="ads" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1228.08 976.55">
         <defs>
+          <path id="user-bg" d="M857.24,867.75h-486.4c-8.84,0-16-7.16-16-16V124.79c0-8.84,7.16-16,16-16h486.4c8.84,0,16,7.16,16,16v726.96c0,8.84-7.16,16-16,16Z" fill="#4285f4"/>
           <path id="location-bg" d="M16,230.29h1196.08c8.38,0,15.19,6.81,15.19,15.19v485.58c0,8.38-6.81,15.19-15.19,15.19H16c-8.38,0-15.19-6.81-15.19-15.19V245.48c0-8.38,6.81-15.19,15.19-15.19Z" fill="#ea4335"/>
           <path id="behaviour-bg" d="M16,230.29h1196.08c8.38,0,15.19,6.81,15.19,15.19v485.58c0,8.38-6.81,15.19-15.19,15.19H16c-8.38,0-15.19-6.81-15.19-15.19V245.48c0-8.38,6.81-15.19,15.19-15.19Z" fill="#34a853"/>
           <rect id="trending-bg" x="355.41" y=".57" width="517.26" height="975.41" rx="23.43" ry="23.43" fill="#fbbc04"/>
