services single page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <ul class="nav-menu">
         <li><a href="#hero" class="active">Home</a></li>
         <li><a href="#bmw-mini-case">Work</a></li>
-        <li><a href="services.html">Services</a></li>
+        <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
@@ -768,6 +768,196 @@
   </div>
   </div>
   </div>
+
+  <!-- Services Section -->
+  <section class="services-grid" id="services">
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title">What I Do</h2>
+        <p class="section-description">
+          Comprehensive digital solutions tailored to your business needs
+        </p>
+      </div>
+
+      <div class="services-container">
+        <!-- Web Development -->
+        <div class="service-card" id="web-development">
+          <div class="service-icon">
+            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M8 9L5 12L8 15M16 9L19 12L16 15M12 4L10 20" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </div>
+          <div class="service-content">
+            <h3 class="service-title">Web Development</h3>
+            <p class="service-description">
+              Full-stack web development with modern frameworks and technologies. 
+              Creating fast, scalable, and responsive web applications.
+            </p>
+            <ul class="service-features">
+              <li>React, Vue.js & Next.js Applications</li>
+              <li>Node.js & Express Backend Development</li>
+              <li>Progressive Web Apps (PWA)</li>
+              <li>API Integration & Development</li>
+              <li>Performance Optimization</li>
+              <li>Responsive Design Implementation</li>
+            </ul>
+            <div class="service-tech">
+              <span class="tech-tag">React</span>
+              <span class="tech-tag">Vue.js</span>
+              <span class="tech-tag">Node.js</span>
+              <span class="tech-tag">TypeScript</span>
+              <span class="tech-tag">Next.js</span>
+            </div>
+            <a href="#contact" class="btn btn--outline btn--full-width">Get Quote</a>
+          </div>
+        </div>
+
+        <!-- Digital Campaigns -->
+        <div class="service-card" id="digital-campaigns">
+          <div class="service-icon">
+            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M3 7V17C3 18.1046 3.89543 19 5 19H19C20.1046 19 21 18.1046 21 17V7M3 7L12 13L21 7M3 7L5 5H19L21 7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </div>
+          <div class="service-content">
+            <h3 class="service-title">Digital Campaigns</h3>
+            <p class="service-description">
+              Strategic digital marketing campaigns with rich media content, 
+              interactive ads, and dynamic creative optimization.
+            </p>
+            <ul class="service-features">
+              <li>HTML5 Rich Media Banners</li>
+              <li>Dynamic Creative Optimization (DCO)</li>
+              <li>Interactive Ad Units</li>
+              <li>Cross-Platform Campaign Development</li>
+              <li>Real-time Data Integration</li>
+              <li>Performance Analytics & Tracking</li>
+            </ul>
+            <div class="service-tech">
+              <span class="tech-tag">HTML5</span>
+              <span class="tech-tag">GSAP</span>
+              <span class="tech-tag">DCO</span>
+              <span class="tech-tag">Google Ads</span>
+              <span class="tech-tag">Analytics</span>
+            </div>
+            <a href="#contact" class="btn btn--outline btn--full-width">Get Started</a>
+          </div>
+        </div>
+
+        <!-- UI/UX/Motion Design -->
+        <div class="service-card" id="ui-ux-design">
+          <div class="service-icon">
+            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9 19C9 20.1046 9.89543 21 11 21H13C14.1046 21 15 20.1046 15 19V5C15 3.89543 14.1046 3 13 3H11C9.89543 3 9 3.89543 9 5V19Z" stroke="currentColor" stroke-width="2"/>
+              <path d="M12 17H12.01" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            </svg>
+          </div>
+          <div class="service-content">
+            <h3 class="service-title">UI/UX/Motion Design</h3>
+            <p class="service-description">
+              User-centered design solutions with engaging animations and 
+              seamless interactions that enhance user experience.
+            </p>
+            <ul class="service-features">
+              <li>User Interface (UI) Design</li>
+              <li>User Experience (UX) Research & Design</li>
+              <li>Motion Graphics & Animations</li>
+              <li>Interactive Prototyping</li>
+              <li>Design Systems & Style Guides</li>
+              <li>Accessibility-First Design</li>
+            </ul>
+            <div class="service-tech">
+              <span class="tech-tag">Figma</span>
+              <span class="tech-tag">Adobe CC</span>
+              <span class="tech-tag">After Effects</span>
+              <span class="tech-tag">Principle</span>
+              <span class="tech-tag">Sketch</span>
+            </div>
+            <a href="#contact" class="btn btn--outline btn--full-width">Learn More</a>
+          </div>
+        </div>
+
+        <!-- Mobile Apps -->
+        <div class="service-card" id="mobile-apps">
+          <div class="service-icon">
+            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <rect x="5" y="2" width="14" height="20" rx="2" ry="2" stroke="currentColor" stroke-width="2"/>
+              <line x1="12" y1="18" x2="12.01" y2="18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            </svg>
+          </div>
+          <div class="service-content">
+            <h3 class="service-title">Mobile Apps</h3>
+            <p class="service-description">
+              Native and cross-platform mobile applications with intuitive 
+              interfaces and seamless performance across all devices.
+            </p>
+            <ul class="service-features">
+              <li>React Native Cross-Platform Apps</li>
+              <li>Progressive Web Apps (PWA)</li>
+              <li>Native iOS & Android Development</li>
+              <li>Mobile-First Design Approach</li>
+              <li>App Store Optimization</li>
+              <li>Push Notifications & Analytics</li>
+            </ul>
+            <div class="service-tech">
+              <span class="tech-tag">React Native</span>
+              <span class="tech-tag">Flutter</span>
+              <span class="tech-tag">Swift</span>
+              <span class="tech-tag">Kotlin</span>
+              <span class="tech-tag">Expo</span>
+            </div>
+            <a href="#contact" class="btn btn--outline btn--full-width">Contact Sales</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Process Section -->
+  <section class="process-section">
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title">My Process</h2>
+        <p class="section-description">
+          A systematic approach to delivering exceptional results
+        </p>
+      </div>
+
+      <div class="process-steps">
+        <div class="process-step">
+          <div class="step-number">01</div>
+          <div class="step-content">
+            <h3>Discovery & Strategy</h3>
+            <p>Understanding your business goals, target audience, and project requirements to create a comprehensive strategy.</p>
+          </div>
+        </div>
+
+        <div class="process-step">
+          <div class="step-number">02</div>
+          <div class="step-content">
+            <h3>Design & Planning</h3>
+            <p>Creating wireframes, prototypes, and detailed project plans with timeline and milestone definitions.</p>
+          </div>
+        </div>
+
+        <div class="process-step">
+          <div class="step-number">03</div>
+          <div class="step-content">
+            <h3>Development & Testing</h3>
+            <p>Implementing the solution with clean, maintainable code and rigorous testing across all platforms.</p>
+          </div>
+        </div>
+
+        <div class="process-step">
+          <div class="step-number">04</div>
+          <div class="step-content">
+            <h3>Launch & Support</h3>
+            <p>Deploying the final product and providing ongoing support, maintenance, and optimization.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Contact Section -->
   <section id="contact" class="contact-section">
