--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     "image": "https://whoisxavier.com/logox.svg",
     "sameAs": [
       "https://linkedin.com/in/xaviergarcia",
-      "https://github.com/xaviergarcia",
+      "https://github.com/xaviergdiez84",
       "https://dribbble.com/xaviergarcia"
     ],
     "knowsAbout": [
@@ -1102,7 +1102,7 @@
               </div>
               <div class="contact-details">
                 <h3>GitHub</h3>
-                <a href="https://github.com/xaviergdiez" target="_blank">github.com/xaviergdiez</a>
+                <a href="https://github.com/xaviergdiez84" target="_blank">github.com/xaviergdiez84</a>
               </div>
             </div>
           </div>
